@@ -20,7 +20,6 @@ import java.text.SimpleDateFormat;
 import java.util.*;
 
 public  class LerPersistirDados extends Conexao {
-
     private final JdbcTemplate jdbcTemplate = new JdbcTemplate(getConexao());
     private final String bucketName = "s3-sixtech";
     private final Region region = Region.US_EAST_1;
@@ -150,6 +149,66 @@ public  class LerPersistirDados extends Conexao {
             tratarErro(e, timestamp);
         }
     }
+
+    public void inserirDadosPibRegionalSP(String key) {
+        String timestamp = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(new Date());
+        System.out.println("[" + timestamp + "] ⏳ Iniciando leitura do arquivo XLSX: " + key);
+
+        try (InputStream inputStream = baixarArquivo(key);
+             Workbook workbook = new XSSFWorkbook(inputStream)) {
+
+            Sheet sheet = workbook.getSheetAt(0);
+            int count = 0;
+
+            for (Row row : sheet) {
+                if (row.getRowNum() == 0) continue;
+                Cell cAno = row.getCell(0);
+                Cell cValor = row.getCell(1);
+
+                if (cAno == null || cValor == null) continue;
+
+                try {
+                    String ano = cAno.toString().trim();
+                    String[] partes = ano.split("\\.");
+                    String anoCerto = partes[0];
+                    Double pibSp = Double.parseDouble(cValor.toString().replace(",", "."));
+
+                    System.out.println(anoCerto + " " + pibSp);
+                    jdbcTemplate.update("INSERT INTO tblPibRegionalSP (ano, pibSP) VALUES (?, ?)",
+                            anoCerto, pibSp);
+
+                    List<PibRegionalSP> pib = jdbcTemplate.query(
+                            "SELECT * FROM tblPibRegionalSP ORDER BY idtblPibRegionalSP DESC LIMIT 1",
+                            new BeanPropertyRowMapper<>(PibRegionalSP.class)
+                    );
+                    System.out.println(pib.getFirst().getIdtblPibRegionalSP());
+
+                    jdbcTemplate.update(
+                            "INSERT INTO tblLogArquivos (tipoLog, descricao, tblPibRegionalSP_idtblPibRegionalSP) VALUES (?, ?, ?)",
+                            "INFO",
+                            "Os registros " + ano + " | " + pibSp + " foram inseridos na tabela PibRegionalSP",
+                            pib.getFirst().getIdtblPibRegionalSP()
+                    );
+
+                    count++;
+                    System.out.println("Os dados inseridos: " + anoCerto  + "e" + pibSp);
+
+                } catch (Exception e) {
+                    jdbcTemplate.update(
+                            "INSERT INTO tblLogArquivos (tipoLog, descricao) VALUES (?, ?)",
+                            "ERROR",
+                            "Erro a o tentar e inserir dados na tabela PibRegionalSP, erro: " + e.getMessage()
+                    );
+                    System.err.println("Erro na linha " + row.getRowNum() + ": " + e.getMessage());
+                }
+            }
+
+            System.out.println("[" + timestamp + "] ✅ Inserção de " + count + " registros de SELIC concluída!");
+        } catch (Exception e) {
+            tratarErro(e, timestamp);
+        }
+    }
+
     public void inserirDadosPibSetor(String key) {
         String timestamp = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(new Date());
         System.out.println("[" + timestamp + "] ⏳ Lendo XLSX: " + key);
@@ -303,6 +362,9 @@ public  class LerPersistirDados extends Conexao {
 
                 try {
                     String ano = row.getCell(0).toString();
+                    String[] partes = ano.split("\\.");
+                    String anoCerto = partes[0];
+
                     String codigoIbge = row.getCell(1).toString();
                     String municipio = row.getCell(2).toString().trim().toLowerCase();
                     int qtdPopulacao = (int) Double.parseDouble(row.getCell(3).toString());
@@ -317,26 +379,31 @@ public  class LerPersistirDados extends Conexao {
 
                     Integer idZona = getZonaId(municipio);
 //                    if (enumZona.getIdZona() == null || enumZona.getIdZona() == 0) continue;
-
                     jdbcTemplate.update(
-                            "INSERT INTO populacao (ano, codigoIbge, municipio, qtdPopulacao, homens, mulheres, razaoSexo, idadeMedia, densidadeDemografico, idZona) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)",
-                            ano, codigoIbge, municipio, qtdPopulacao, homens, mulheres,
+                            "INSERT INTO tblPopulacao (ano, codigoIbge, municipio, qtdPopulacao, homens, mulheres, razaoSexo, idadeMedia, densidadeDemo, tblZona_idZona) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)",
+                            anoCerto, codigoIbge, municipio, qtdPopulacao, homens, mulheres,
                             razaoSexo, idadeMedia, densidadeDemografico, idZona
                     );
 
                     List<Populacao> pop = jdbcTemplate.query(
-                            "SELECT * FROM populacao ORDER BY id DESC LIMIT 1",
+                            "SELECT * FROM tblPopulacao ORDER BY idtblPopulacao DESC LIMIT 1",
                             new BeanPropertyRowMapper<>(Populacao.class)
                     );
 
                     jdbcTemplate.update(
-                            "INSERT INTO logPopulacao (idPopulacao, descricao) VALUES (?, ?)",
-                            pop.get(0).getId(),
-                            "Registro de população (" + municipio + ") inserido com sucesso."
+                            "INSERT INTO tblLogArquivos (tipoLog, descricao, tblPopulacao_idtblPopulacao) VALUES (?, ?, ?)",
+                            "INFO",
+                            "Os registros foram inseridos na tabela de populcao",
+                            pop.getFirst().getIdtblPopulacao()
                     );
-
                     count++;
+                    System.out.println("dados da tabela populacao inseridos com sucesso");
                 } catch (Exception e) {
+                    jdbcTemplate.update(
+                            "INSERT INTO tblLogArquivos (tipoLog, descricao) VALUES (?, ?)",
+                            "ERROR",
+                            "Erro a o tentar e inserir dados na tabela de populacao erro: " + e.getMessage()
+                    );
                     System.err.println("Erro linha " + row.getRowNum() + ": " + e.getMessage());
                 }
                 total++;
@@ -368,14 +435,14 @@ public  class LerPersistirDados extends Conexao {
                 count++;
             }
 
-            System.out.println("[" + timestamp + "] ✅ Inserção de " + count + " zonas concluída!");
+            System.out.println("[" + timestamp + "] Inserção de " + count + " zonas concluída!");
         } catch (Exception e) {
             tratarErro(e, timestamp);
         }
     }
 
     private InputStream baixarArquivo(String key) throws IOException {
-        System.out.println("📦 Baixando do S3: " + bucketName + "/" + key);
+        System.out.println("Baixando do S3: " + bucketName + "/" + key);
         GetObjectRequest request = GetObjectRequest.builder()
                 .bucket(bucketName)
                 .key(key)
@@ -383,10 +450,10 @@ public  class LerPersistirDados extends Conexao {
 
         try {
             ResponseInputStream<GetObjectResponse> response = s3Client.getObject(request);
-            System.out.println("✅ Arquivo XLSX carregado com sucesso!");
+            System.out.println("Arquivo carregado");
             return response;
         } catch (S3Exception e) {
-            throw new IOException("Erro ao baixar do S3: " + e.awsErrorDetails().errorMessage(), e);
+            throw new IOException("erro ao baixar do s3: " + e.awsErrorDetails().errorMessage(), e);
         }
     }
 
